feat(fx): add provider profiles, MCP connection window, and pre-connection settings
Expose Turboism's local MCP endpoint, bearer token, and a bounded secret-free
activity history in a dedicated window, and pin the default MCP port to 43123
while keeping turboism.mcp.port=0 ephemeral.

Make fx Settings reachable directly from the Turboism menu so runtime setup and
the fx-owned shell no longer require an established ACP session.

Replace the single custom-endpoint prototype with saved provider profiles:
fx-owned Vercel/Codex/Grok built-ins launch their exact fx login commands, and
custom OpenAI-compatible endpoints are served by a Turboism-owned loopback
adapter that honours the ai-language-model-id header, supports keyless
self-hosted endpoints, and no longer rejects the reasoning field fx always
sends. Provider API keys persist through Windows DPAPI when available and
otherwise through auth.json in the plugin's own config directory.